--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,45 @@
 .my-black{
     background-color: #2c3e50;
 }
+
+.my-blue-box{
+    width: 100%;
+    height: 50px;
+    background-color: blue;
+}
+
+.my-red-box{
+    width: 100%;
+    height: 50px;
+    background-color: red;
+}
+
+.my-yellow-box{
+    width: 100%;
+    height: 50px;
+    background-color: yellow;
+}
+
+.my-purple-box{
+    width: 100%;
+    height: 50px;
+    background-color: purple;
+}
+
+.my-green-box{
+    width: 100%;
+    height: 50px;
+    background-color: green;
+}
+
+.my-coral-box{
+    width: 100%;
+    height: 50px;
+    background-color:coral;
+}
+
+.my-deeppink-box{
+    width: 100%;
+    height: 50px;
+    background-color:deeppink;
+}
