--- a/css/style.css
+++ b/css/style.css
@@ -38,8 +38,33 @@
     background-color:coral;
 }
 
+.my-gold-box{
+    width: 100%;
+    height: 50px;
+    background-color:gold;
+}
+
 .my-deeppink-box{
     width: 100%;
     height: 50px;
     background-color:deeppink;
 }
+
+.my-jumbotron{
+    width: 100%;
+    /* height: 400px; */
+    background-color: #1abc9c;
+}
+
+.my-green{
+    background-color: #1abc9c;
+}
+
+.my-grey{
+    background-color: #3a546d;
+}
+
+.my-dark-grey{
+    background-color: #2c3e50;
+}
+
