--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,10 @@
-.my-black{
+header{
     background-color: #2c3e50;
+    height: 50px;
+}
+
+h1{
+    font-weight: 700;
 }
 
 .my-blue-box{
@@ -50,21 +55,51 @@
     background-color:deeppink;
 }
 
-.my-jumbotron{
+div.card{
     width: 100%;
-    /* height: 400px; */
+    /* height: 150px; */
+    object-fit: contain;
+}
+
+div.card img{
+    border-radius: 20px;
+}
+
+#my-jumbotron{
+    width: 100%;
+    height: 400px;
     background-color: #1abc9c;
 }
 
-.my-green{
-    background-color: #1abc9c;
+#my-jumbo-box{
+    width: 450px;
+    height: 400px;
+    background-color: #035242;
 }
 
-.my-grey{
+div.avatar-image img{
+    width: 40%;
+}
+
+span.star-decoration{
+    width: 100px;
+    height: 7px;
+}
+
+#portfolio{
+    color: rgb(44, 62, 80);
+}
+
+#about{
+    background-color: #1abc9c;
+    height: 400px;
+}
+
+#my-footer-top{
     background-color: #3a546d;
 }
 
-.my-dark-grey{
+#my-footer-bottom{
     background-color: #2c3e50;
 }
 
