--- a/css/style.css
+++ b/css/style.css
@@ -13,48 +13,6 @@ h1{
     background-color: blue;
 }
 
-.my-red-box{
-    width: 100%;
-    height: 50px;
-    background-color: red;
-}
-
-.my-yellow-box{
-    width: 100%;
-    height: 50px;
-    background-color: yellow;
-}
-
-.my-purple-box{
-    width: 100%;
-    height: 50px;
-    background-color: purple;
-}
-
-.my-green-box{
-    width: 100%;
-    height: 50px;
-    background-color: green;
-}
-
-.my-coral-box{
-    width: 100%;
-    height: 50px;
-    background-color:coral;
-}
-
-.my-gold-box{
-    width: 100%;
-    height: 50px;
-    background-color:gold;
-}
-
-.my-deeppink-box{
-    width: 100%;
-    height: 50px;
-    background-color:deeppink;
-}
-
 div.card{
     width: 100%;
     /* height: 150px; */
@@ -86,6 +44,10 @@ div.avatar-image img{
     height: 7px;
 }
 
+.start-bootstrap{
+    color: rgb(40, 144, 136);
+}
+
 #portfolio{
     color: rgb(44, 62, 80);
 }
@@ -100,10 +62,14 @@ div.avatar-image img{
 }
 
 #my-footer-top{
+    min-height: 120px;
     background-color: #3a546d;
 }
 
 #my-footer-bottom{
+    height: 50px;
+    font-size: .7rem;
+    line-height: 50px;
     background-color: #2c3e50;
 }
 
