--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+body{
+    min-width: 530px;
+    overflow-x: hidden;
+}
+
 header{
     background-color: #2c3e50;
     height: 50px;
@@ -5,12 +10,6 @@ header{
 
 h1{
     font-weight: 700;
-}
-
-.my-blue-box{
-    width: 100%;
-    height: 50px;
-    background-color: blue;
 }
 
 div.card{
